Added operator iter to Iterator